--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <ul id="recipe-list" class="recipe-list">
-            <li class="recipe-item">
+            <!-- <li class="recipe-item">
                 <img src="https://spoonacular.com/recipeImages/12395-312x231.jpg" alt="image">
                 <h2>Recipe 1</h2>
                 <p><strong>Ingredients:</strong>
@@ -45,7 +45,7 @@
                 Ingredient 3
                 </p>
                 <a href="#">View Recipe</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 
